--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/stype.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets//icon/themify-icons-font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="./assets/img/slider/slider1.jpg">
     
 </head>
 
