--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Band</title>
     <link rel="stylesheet" href="./assets/css/stype.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets//icon/themify-icons-font/themify-icons/themify-icons.css">
@@ -49,6 +49,15 @@
 
         <!-- SLIDER -->
         <div id="slider">
+            <div class="slider-wapper">
+
+                <img class="slide img-slider" src="https://www.w3schools.com/w3images/la.jpg" alt="">
+                <img class="slide img-slider" src="https://www.w3schools.com/w3images/ny.jpg" alt="">
+                <img class="slide img-slider" src="https://www.w3schools.com/w3images/chicago.jpg" alt="">
+                
+            </div>
+            
+
             <div class="text-content">
                 <h2 class="text-heading">
                     Los Angeles
